--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,71 +14,70 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QTableWidget" name="tableWidget">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>50</y>
-      <width>761</width>
-      <height>361</height>
-     </rect>
-    </property>
-    <column>
-     <property name="text">
-      <string>Index</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Offset</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>HeaderSize</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>DataSize</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Name</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>SampleRate</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>BitsPerSample</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>NumChannels</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Unknown</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>New Column</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>LoopEnd</string>
-     </property>
-    </column>
-   </widget>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
+     <widget class="QTableWidget" name="tableWidget">
+      <column>
+       <property name="text">
+        <string>Index</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Offset</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>HeaderSize</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>DataSize</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Name</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>SampleRate</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>BitsPerSample</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>NumChannels</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Unknown</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>New Column</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>LoopEnd</string>
+       </property>
+      </column>
+     </widget>
+    </item>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -91,7 +90,7 @@
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
-     <string>File</string>
+     <string>Open</string>
     </property>
     <widget class="QMenu" name="menuSound">
      <property name="title">
@@ -114,6 +113,8 @@
     <addaction name="menuSound"/>
     <addaction name="menuDrums"/>
     <addaction name="menuMusic"/>
+    <addaction name="actionExtract"/>
+    <addaction name="actionCreate_Bank"/>
    </widget>
    <addaction name="menuFile"/>
   </widget>
@@ -131,6 +132,16 @@
   <action name="actionOpen_3">
    <property name="text">
     <string>Open</string>
+   </property>
+  </action>
+  <action name="actionExtract">
+   <property name="text">
+    <string>Extract</string>
+   </property>
+  </action>
+  <action name="actionCreate_Bank">
+   <property name="text">
+    <string>Create Bank</string>
    </property>
   </action>
  </widget>
